timerscrenn oluşturuldu ve chatbot eklendi(iş paketlerinde yok)

--- a/PomodoroApp/app.json
+++ b/PomodoroApp/app.json
@@ -26,6 +26,10 @@
     },
     "plugins": [
       "expo-sqlite"
+    ],
+    "assetBundlePatterns": [
+      "**/*",
+      "assets/images/*"
     ]
   }
 }
