--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.1.2",
@@ -21,10 +22,11 @@
     "expo-notifications": "~0.29.14",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
+    "openai": "^4.91.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-sound": "^0.11.2",
@@ -34,7 +36,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/node": "^22.14.0",
     "@types/react": "~18.3.12",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.3.3"
   },
   "private": true
