--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.1.2",
     "date-fns": "^4.1.0",
     "expo": "~52.0.39",
     "expo-av": "~15.0.2",
+    "expo-calendar": "~11.0.0",
     "expo-constants": "~17.0.8",
     "expo-file-system": "~18.0.11",
     "expo-notifications": "~0.29.14",
-    "expo-sqlite": "~15.1.2",
+    "expo-sqlite": "^15.1.4",
     "expo-status-bar": "~2.0.1",
     "openai": "^4.91.1",
     "react": "18.3.1",
