--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -34,6 +34,8 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "15.8.0",
     "react-native-uuid": "^2.0.3",
+    "react-native-webview": "^13.13.5",
+    "react-native-youtube-iframe": "^2.3.0",
     "victory-native": "^41.16.1"
   },
   "devDependencies": {
