--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -20,23 +20,29 @@
     "expo-av": "~15.0.2",
     "expo-calendar": "~11.0.0",
     "expo-constants": "~17.0.8",
-    "expo-file-system": "~18.0.11",
+    "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.14",
     "expo-sqlite": "^15.1.4",
     "expo-status-bar": "~2.0.1",
     "openai": "^4.91.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.8.0",
     "react-native-uuid": "^2.0.3",
     "react-native-webview": "^13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
-    "victory-native": "^41.16.1"
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
