--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -48,6 +48,7 @@
     "@babel/core": "^7.25.2",
     "@types/node": "^22.14.0",
     "@types/react": "~18.3.12",
+    "@types/uuid": "^10.0.0",
     "react-native-dotenv": "^3.4.11",
     "typescript": "^5.3.3"
   },
