--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -9,48 +9,48 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.1.2",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.39",
-    "expo-av": "~15.0.2",
-    "expo-calendar": "~11.0.0",
-    "expo-constants": "~17.0.8",
-    "expo-document-picker": "~13.0.3",
-    "expo-file-system": "~18.0.12",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-linking": "~7.0.5",
-    "expo-notifications": "~0.29.14",
-    "expo-sqlite": "^15.1.4",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.4",
+    "expo-calendar": "~14.1.4",
+    "expo-document-picker": "~13.1.5",
+    "expo-file-system": "~18.1.9",
+    "expo-image-manipulator": "~13.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-notifications": "~0.31.1",
+    "expo-sqlite": "~15.2.9",
+    "expo-status-bar": "~2.2.3",
     "openai": "^4.91.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^2.17.0",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-sound": "^0.11.2",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "15.11.2",
     "react-native-uuid": "^2.0.3",
     "react-native-webview": "^13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "expo-constants": "~17.1.6",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/node": "^22.14.0",
-    "@types/react": "~18.3.12",
     "@types/uuid": "^10.0.0",
-    "react-native-dotenv": "^3.4.11",
-    "typescript": "^5.3.3"
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
