--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -12,19 +12,22 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/stack": "^7.1.2",
+    "@types/react": "~19.0.10",
     "date-fns": "^4.1.0",
     "expo": "^53.0.0",
     "expo-av": "~15.1.4",
     "expo-calendar": "~14.1.4",
+    "expo-constants": "~17.1.6",
     "expo-document-picker": "~13.1.5",
     "expo-file-system": "~18.1.9",
     "expo-image-manipulator": "~13.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.4",
-    "expo-notifications": "~0.31.1",
+    "expo-notifications": "~0.31.2",
     "expo-sqlite": "~15.2.9",
     "expo-status-bar": "~2.2.3",
     "openai": "^4.91.1",
@@ -42,14 +45,13 @@
     "react-native-webview": "^13.13.5",
     "react-native-youtube-iframe": "^2.3.0",
     "tesseract.js": "^6.0.1",
-    "expo-constants": "~17.1.6",
-    "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/node": "^22.14.0",
     "@types/uuid": "^10.0.0",
+    "expo-module-scripts": "^4.1.7",
     "react-native-dotenv": "^3.4.11"
   },
   "private": true
