--- a/PomodoroApp/package.json
+++ b/PomodoroApp/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/slider": "^4.5.6",
-    "@react-navigation/bottom-tabs": "^7.2.1",
-    "@react-navigation/native": "^7.0.17",
-    "@react-navigation/stack": "^7.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "@types/react": "~19.0.10",
     "date-fns": "^4.1.0",
     "expo": "^53.0.0",
@@ -30,11 +30,13 @@
     "expo-notifications": "~0.31.2",
     "expo-sqlite": "~15.2.9",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^10.14.1",
     "openai": "^4.91.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "^6.7.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
